// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> emptyList should be rendered properly 1`] = `
<List
  className=""
  dataSource={Array []}
  size="large"
/>
`;

exports[`<List /> horizontalList should be rendered properly 1`] = `
<List
  className="list"
  dataSource={
    Array [
      Object {
        "id": 1,
        "name": "Alex",
      },
      Object {
        "id": 2,
        "name": "Valdis",
      },
      Object {
        "id": 3,
        "name": "Gustav",
      },
      Object {
        "id": 4,
        "name": "Vlad",
      },
    ]
  }
  grid={
    Object {
      "column": 4,
      "gutter": 12,
    }
  }
  size="small"
/>
`;

exports[`<List /> list item should be rendered properly 1`] = `
<Item
  className="listItem"
>
  <UNDEFINED
    size={12}
    type="white"
  />
</Item>
`;

exports[`<List /> verticalList should be rendered properly 1`] = `
<List
  className=""
  dataSource={
    Array [
      Object {
        "id": 1,
        "name": "Alex",
      },
      Object {
        "id": 2,
        "name": "Valdis",
      },
      Object {
        "id": 3,
        "name": "Gustav",
      },
      Object {
        "id": 4,
        "name": "Vlad",
      },
    ]
  }
  size="small"
/>
`;
